hphp/test/slow/hack_mode/2203.php.expectf
Fatal error: A source file must begin with '<?hh'. in %s/test/slow/hack_mode/2203.php on line 1